--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
 
 	<script src="scripts/app.js"></script>
+	<script src="scripts/services/apiService.js"></script>
 	<script src="scripts/controllers/home.js"></script>
 
 </body>
