--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,11 @@
 	<script src="bower_components/angular-resource/angular-resource.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
+	<script src="bower_components/raphael/raphael.js"></script>
 
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/home.js"></script>
+	<script src="scripts/map.js"></script>
 
 </body>
 </html>
