--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
 
 <body ng-app="leagueOfApp">
 
-	<div class="container">
-		<div ng-view=""></div>
-	</div>
+	<main class="container" ng-view>
+		
+	</main>
 	
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-resource/angular-resource.js"></script>
