--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/services/apiService.js"></script>
 	<script src="scripts/controllers/home.js"></script>
+	<script src="scripts/controllers/continent.js"></script>
 
 </body>
 </html>
