--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,9 @@
 	<script src="bower_components/raphael/raphael.js"></script>
 
 	<script src="scripts/app.js"></script>
-	<script src="scripts/services/apiService.js"></script>
+	<script src="scripts/services/api.js"></script>
 	<script src="scripts/controllers/home.js"></script>
+	<script src="scripts/controllers/summoner.js"></script>
 
 </body>
 </html>
