--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
 	<script src="bower_components/raphael/raphael.js"></script>
 
 	<script src="scripts/app.js"></script>
+	<script src="scripts/services/mapService.js"></script>
 	<script src="scripts/controllers/home.js"></script>
+	<script src="scripts/vivus.min.js"></script>
 	<script src="scripts/map.js"></script>
 
 </body>
