--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="styles/summoner.css">
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<base href="/">
 
 </head>
 
