--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,16 @@
 	<script src="bower_components/angular-resource/angular-resource.js"></script>
 	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/angular-touch/angular-touch.js"></script>
+	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/raphael/raphael.js"></script>
 	<script src="bower_components/velocity/velocity.min.js"></script>
 
 	<script src="scripts/app.js"></script>
+	<script src="scripts/services/helpers.js"></script>
 	<script src="scripts/services/api.js"></script>
 	<script src="scripts/services/mapService.js"></script>
 	<script src="scripts/services/domelements.js"></script>
+	<script src="scripts/directives/fadeIn.js"></script>
 	<script src="scripts/controllers/home.js"></script>
 	<script src="scripts/controllers/summoner.js"></script>
 
