--- a/app/index.html
+++ b/app/index.html
@@ -36,12 +36,14 @@
 	<script src="scripts/services/api.js"></script>
 	<script src="scripts/services/mapService.js"></script>
 	<script src="scripts/services/domelements.js"></script>
+	<script src="scripts/services/map.js"></script>
 
 	<script src="scripts/controllers/home.js"></script>
 	<script src="scripts/controllers/summoner.js"></script>
 	<script src="scripts/controllers/continent.js"></script>
 
 	<script src="scripts/directives/showGame.js"></script>
+	<script src="scripts/directives/refreshGame.js"></script>
 	<script src="scripts/directives/fadeIn.js"></script>
 
 </body>
